Improvement from Jan : An attempt to make the rules more explicit, and the implementation more flexible by not relying on JavadocHelper, but rather inlining the important parts into the checker.